# tumrosbag

./: CMakeLists.txt  README.md  package.xml
launch/: generate_new.launch  generate_rosbag.launch
script/: bag.py
src/: generate_new.cpp  generate_rosbag.cpp
